new changes and new files

--- a/My-Portfolio2/portfolio/src/components/about/about.css
+++ b/My-Portfolio2/portfolio/src/components/about/about.css
@@ -1,8 +1,36 @@
 .about {
-  position: relative;
-  top: 85px;
+  position: absolute;
+  top: 1950px;
   background-color: rgb(35, 37, 47);
-  color: rgb(255, 255, 255);
-  font-size: 24px;
-  height: calc(100vh - 85px);
+  width: 80%;
+  height: 250px;
+}
+.about .card {
+  width: 100%;
+  height: 100%;
+  background-color: rgb(109, 89, 168);
+  text-align: start;
+  color: white;
+  border: 1px solid rgba(0, 0, 0, 0.374);
+  border-radius: 15px;
+}
+.about .card h1 {
+  padding-left: 30px;
+  padding-top: 20px;
+}
+.about .card h5 {
+  padding-left: 50px;
+  padding-top: 15px;
+}
+.about .card p {
+  padding-left: 50px;
+  padding-right: 40px;
+  padding-top: 5px;
+}
+
+@media (max-width: 1024px) {
+  .about {
+    top: 2450px;
+    height: 332px;
+  }
 }/*# sourceMappingURL=about.css.map */
