--- a/My-Portfolio2/portfolio/src/components/footer/footer.css
+++ b/My-Portfolio2/portfolio/src/components/footer/footer.css
@@ -1,5 +1,116 @@
 .footer {
-  background-color: rgb(35, 37, 47);
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  bottom: 0px;
+  background-color: rgba(0, 0, 0, 0.23);
   color: rgb(255, 255, 255);
   font-size: 24px;
+  width: 100%;
+  height: 530px;
+}
+.footer .section-1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-left: 80px;
+  margin-top: 50px;
+  height: 250px;
+}
+.footer .section-1 #icon svg {
+  width: 70px;
+  height: 70px;
+}
+.footer .section-1 .text h4 {
+  padding-left: 10px;
+  padding-top: 20px;
+}
+.footer .section-1 .text p {
+  padding-left: 10px;
+  font-size: 16px;
+  padding-top: 30px;
+  color: rgb(213, 56, 46);
+}
+.footer .section-1 .links {
+  display: flex;
+  justify-content: start;
+  padding-top: 10px;
+  padding-left: 10px;
+  width: 200px;
+}
+.footer .section-1 .links a {
+  padding-left: 10px;
+  list-style: none;
+  color: white;
+}
+.footer .section-1 .links a svg {
+  width: 40px;
+  height: 40px;
+}
+.footer .section-1 .moreInfo {
+  font-weight: 150px;
+  padding-top: 50px;
+  padding-left: 10px;
+  font-size: 12px;
+  color: rgba(255, 255, 255, 0.837);
+}
+.footer .section-1 .copy {
+  padding-top: 60px;
+  font-size: 11px;
+  padding-left: 10px;
+}
+@media (max-width: 1024px) {
+  .footer .section-1 {
+    padding-left: 23px;
+  }
+}
+.footer .section-2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding-right: 30px;
+  margin-top: 150px;
+  height: 350px;
+}
+.footer .section-2 .form form .formContain {
+  display: flex;
+  flex-direction: column;
+  height: 250px;
+}
+.footer .section-2 .form form .formContain .text {
+  width: 400px;
+  height: 150px;
+  border: none;
+  outline: none;
+  padding-bottom: 110px;
+  padding-left: 10px;
+  font-size: 16px;
+  border-radius: 15px;
+}
+.footer .section-2 .form form .formContain button {
+  background-color: #3B3A51;
+  width: 150px;
+  border-radius: 11px;
+  border-style: none;
+  height: 42px;
+  outline-style: none;
+  color: white;
+  font-size: 20px;
+  margin-top: 20px;
+}
+.footer .section-2 .form form .formContain button:hover {
+  background-color: rgba(59, 58, 81, 0.537254902);
+}
+@media (max-width: 1024px) {
+  .footer .section-2 {
+    padding-left: 23px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .footer {
+    height: 726px;
+    flex-direction: column;
+  }
 }/*# sourceMappingURL=footer.css.map */
