--- a/My-Portfolio2/portfolio/src/components/footer/footer.scss
+++ b/My-Portfolio2/portfolio/src/components/footer/footer.scss
@@ -1,9 +1,188 @@
 @use '../../global.scss' as*;
 .footer {
-
-    background-color: $main-color;
+    
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    bottom: 0px;
+    background-color: rgba(0, 0, 0, 0.23);
     color: rgb(255, 255, 255);
     font-size: 24px;
+    width: 100%;
+    height: 530px;
     
+
+    .section-1{
+
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding-left: 80px;
+        margin-top: 50px;
+        height: 250px;
+
+        #icon{
+            
+            
+            svg{
+
+                width: 70px;
+                height: 70px;
+
+            }
+
+        }
+
+        .text{
+            
+        h4{padding-left: 10px; padding-top: 20px;}
+
+
+        p{padding-left: 10px; font-size: 16px; padding-top: 30px; color: rgb(213,56,46);}
     
+    }
+
+     
+       .links{
+
+        display: flex;
+        justify-content: start;
+        padding-top: 10px;
+        padding-left: 10px;
+        width: 200px;
+
+        a{
+           
+            padding-left: 10px;
+            list-style: none;
+            color: white;
+            
+
+            svg{
+                
+                
+                width: 40px;
+                height: 40px;
+
+            }
+
+        }
+
+       }
+
+        .moreInfo{
+
+            font-weight: 150px;
+            padding-top: 50px;
+            padding-left: 10px;
+            font-size: 12px;
+            color: rgba(255, 255, 255, 0.837);
+
+        }
+
+        .copy{
+
+            padding-top: 60px;
+            font-size: 11px;
+            padding-left: 10px;
+
+        }
+
+    }
+
+
+    @media (max-width: 1024px) {
+        .section-1 {
+
+            padding-left: 23px;
+
+        }
+    }
+
+    .section-2{
+
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        padding-right: 30px;
+        margin-top: 150px;
+        height: 350px;
+
+
+        .form{
+            
+            form{
+                
+                .formContain{
+                    display: flex;
+                    flex-direction: column;
+                    height: 250px;
+
+                    .text{
+        
+                        width: 400px;
+                        height: 150px;
+                        border: none;
+                        outline: none;
+                        padding-bottom: 110px;
+                        padding-left: 10px;
+                        font-size: 16px;
+                        border-radius: 15px;
+                
+                }
+        
+                button { 
+                    
+                    background-color: #3B3A51;
+                    width: 150px;
+                    border-radius: 11px;
+                    border-style: none;
+                    height: 42px;
+                    outline-style: none;
+                    color: white;
+                    font-size: 20px;
+                    margin-top: 20px;
+                    
+                    
+                    
+        
+                    
+                    
+            
+                    &:hover{
+            
+                        background-color: #3b3a5189;
+            
+                    }
+            }
+
+                }
+                
+                
+                
+      }
+            
+              
+
+
+        }
+    }
+      
+    @media (max-width: 1024px) {
+        .section-2 {
+
+            padding-left: 23px;
+            
+        }
+    }
+    
+    }
+
+    @media (max-width: 1024px) {
+        .footer {
+
+            height: 726px;
+            flex-direction: column;
+        }
     }
