--- a/My-Portfolio2/portfolio/src/components/home/home.css
+++ b/My-Portfolio2/portfolio/src/components/home/home.css
@@ -1,10 +1,14 @@
 .home {
   position: relative;
-  top: 85px;
-  height: 400vh;
+  height: 2850px;
   background-color: rgb(35, 37, 47);
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
   align-items: center;
+}
+
+@media (max-width: 1280px) {
+  .home {
+    height: 3608px;
+  }
 }/*# sourceMappingURL=home.css.map */
