--- a/My-Portfolio2/portfolio/src/components/navbar/topbar.scss
+++ b/My-Portfolio2/portfolio/src/components/navbar/topbar.scss
@@ -2,15 +2,23 @@
 
 .navbar{
     
+    position: absolute;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    width: 100%;
     height: 85px;
     z-index: 2;
     background-color: $main-color;
     padding: 0;
+
     
 
     .container{
-
+        margin-left: 0;
+        margin-right: 0;
         height: 100%;
+        width: 100%;
 
     }
 
@@ -21,6 +29,7 @@
         align-items: center;
         width: 250px;
 
+
         h2{
 
             margin: 0;
@@ -28,6 +37,21 @@
         }
 
     }
+
+    @media (max-width: 1024px) {
+       .info {
+            display: none;
+        }
+    }
+
+    
+    
+
+    
+
+   
+
+    
 
     .my-photo{
 
@@ -40,19 +64,26 @@
 
         color: white;
         font-size: 24px;
+        margin-right: 10px;
 
     }
 
-    .list{
+   
 
-        width: 50%;
+    .list{
+        
+        display: flex;
+        justify-content: center;
+        width: 35%;
+        
+
 
         a{
 
             border-radius: 14px;
             color: white;
             font-size: 20px;
-            margin-left: 15px;
+            
 
             &:hover {
 
@@ -63,6 +94,8 @@
         }
         
     }
+
+   
 
 
     .contact-button{
@@ -79,6 +112,16 @@
             outline-style: none;
             color: white;
             font-size: 20px;
+            margin-right: 18px;
+            
+            
+            a{
+
+                list-style: none;
+                color: white;
+                text-decoration: none;
+    
+            }
             
     
             &:hover{
@@ -87,9 +130,9 @@
     
             }
     }
-        
-        
-    }
+}
+
+    
     
     .sun{
         
@@ -106,4 +149,10 @@
             
     }
 
+  
+
+    
+
 }
+
+
