--- a/My-Portfolio2/portfolio/src/components/screen/screen.css
+++ b/My-Portfolio2/portfolio/src/components/screen/screen.css
@@ -3,13 +3,13 @@
   background-color: rgb(35, 37, 47);
   color: rgb(255, 255, 255);
   font-size: 24px;
-  top: 280px;
+  top: 450px;
   height: 600px;
 }
 .screen .contain {
   display: flex;
   position: relative;
-  width: 70%;
+  width: 1000px;
   margin-left: auto;
   margin-right: auto;
   justify-content: center;
@@ -23,10 +23,15 @@
 }
 .screen .contain #backgroundImg {
   position: absolute;
-  top: 60px;
-  width: 450px;
-  height: 450px;
-  opacity: 0.05;
+  top: 50px;
+  width: 500px;
+  height: 500px;
+  opacity: 0.1;
+}
+@media (max-width: 1280px) {
+  .screen .contain #backgroundImg {
+    width: 70%;
+  }
 }
 .screen .contain .buttons {
   position: absolute;
@@ -36,6 +41,7 @@
   justify-content: space-evenly;
   align-items: center;
   z-index: 1;
+  opacity: 0.5;
 }
 .screen .contain .buttons button {
   width: 20px;
@@ -51,4 +57,17 @@
   width: 70%;
   text-align: center;
   font-size: 20px;
+  border-radius: 15px;
+  padding: 20px;
+}
+@media (max-width: 1280px) {
+  .screen .contain {
+    width: 70%;
+  }
+}
+
+@media (max-width: 1280px) {
+  .screen {
+    height: 700px;
+  }
 }/*# sourceMappingURL=screen.css.map */
