--- a/My-Portfolio2/portfolio/src/components/screen/screen.scss
+++ b/My-Portfolio2/portfolio/src/components/screen/screen.scss
@@ -1,19 +1,22 @@
 @use '../../global.scss' as *;
 
 .screen{
+
 position: absolute;
 background-color: $main-color;
 color: rgb(255, 255, 255);
 font-size: 24px;
-top: 280px; 
+top: 450px; 
 height: 600px;
+
+
 
 
 .contain{
 
     display: flex;
     position: relative;
-    width: 70%;
+    width: 1000px;
     margin-left: auto;
     margin-right: auto;
     justify-content: center;
@@ -24,17 +27,32 @@ height: 600px;
     height: 100%;
     border-width: 2px;
     border-style: solid;
+
     
     
 
 
     #backgroundImg{
+
+        
         position: absolute;
-        top: 60px;
-        width: 450px;
-        height: 450px;
-        opacity: 0.05;
+        top: 50px;
+        width: 500px;
+        height: 500px;
+        opacity: 0.1;
+        
     }
+
+    @media (max-width:  1280px) {
+        #backgroundImg{
+            
+            width: 70%;
+    
+        }
+    }
+    
+
+    
 
     .buttons{
         position: absolute;
@@ -44,6 +62,7 @@ height: 600px;
         justify-content:space-evenly;
         align-items: center;
         z-index: 1;
+        opacity: 0.5;
 
         button{
 
@@ -67,9 +86,13 @@ height: 600px;
 
     .badges{
         
+       
         width: 70%;
         text-align: center;
         font-size: 20px;
+        border-radius: 15px;
+        padding: 20px;
+        
 
     }
 
@@ -77,4 +100,22 @@ height: 600px;
 }
 
 
+@media (max-width:  1280px) {
+    .contain {
+        
+        width: 70%;
+
+    }
+}
+
+
+
+}
+
+@media (max-width:  1280px) {
+    .screen{
+        
+        height: 700px;
+
+    }
 }
