--- a/My-Portfolio2/portfolio/src/components/skills/skills.scss
+++ b/My-Portfolio2/portfolio/src/components/skills/skills.scss
@@ -1,11 +1,259 @@
 @use '../../global.scss' as *;
 
 .skills{
-
+position: absolute;
+top: 1200px;
 background-color: $main-color;
 color: rgb(255, 255, 255);
 font-size: 24px;
+width: 100%; 
+height: 650px;
 
 
+.title{
+
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    
 
 }
+
+
+.contain{
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    height: 100%;
+    margin-top: 60px;
+
+    .line-1{
+         
+        display: flex;
+        justify-content: space-evenly ;
+        width: 100%;
+
+        .containIcon{
+
+            display: flex;
+            justify-content: center;
+            
+
+            .back{
+                
+
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background-color: rgba(0, 0, 0, 0.24);
+                width: 70px;
+                height: 70px;
+                border: 1px solid #3B3A51;
+                border-radius: 15px;
+            }
+    
+            .icon{
+    
+                width: 55px;
+                height: 55px;
+                color: white;
+    
+            }
+
+            .text{
+
+                h1{
+
+                    font-size: 26px;
+                    padding-left: 20px;
+                    padding-top: 5px;
+    
+                }
+                
+                p{
+
+                    font-size: 14px;
+                    padding-left: 20px;
+                    padding-top: 10px;
+                    
+                    
+
+                }
+
+            }
+
+            
+            
+            
+        }
+
+       
+
+    }
+
+    @media (max-width:  1024px) {
+        .line-1{
+            
+            flex-direction: column;
+    
+        }
+    }
+
+
+    .line-2{
+         
+        display: flex;
+        justify-content: space-evenly ;
+        width: 100%;
+        margin-top: 40px;
+
+        
+
+        .containIcon{
+
+            display: flex;
+            justify-content: center;
+            
+
+            .back{
+            
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background-color: rgba(0, 0, 0, 0.24);
+                width: 70px;
+                height: 70px;
+                border: 1px solid #3B3A51;
+                border-radius: 15px;
+            }
+    
+            .icon{
+    
+                width: 55px;
+                height: 55px;
+                color: white;
+    
+            }
+
+            .text{
+
+                h1{
+
+                    font-size: 26px;
+                    padding-left: 20px;
+                    padding-top: 5px;
+    
+                }
+                
+                p{
+
+                    font-size: 14px;
+                    padding-left: 20px;
+                    padding-top: 10px;
+                    
+                    
+
+                }
+
+            }
+
+            
+            
+            
+        }
+
+       
+
+    }
+
+    @media (max-width:  1024px) {
+        .line-2{
+            
+            flex-direction: column;
+    
+        }
+    }
+
+    .line-3{
+         
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        margin-top: 40px;
+       
+
+        .containIcon{
+
+            display: flex;
+            justify-content: center;
+            
+
+            .back{
+            
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background-color: rgba(0, 0, 0, 0.24);
+                width: 70px;
+                height: 70px;
+                border: 1px solid #3B3A51;
+                border-radius: 15px;
+            }
+    
+            .icon{
+    
+                width: 55px;
+                height: 55px;
+                color: white;
+    
+            }
+
+            .text{
+
+                h1{
+
+                    font-size: 26px;
+                    padding-left: 20px;
+                    padding-top: 5px;
+    
+                }
+                
+                p{
+
+                    font-size: 14px;
+                    padding-left: 20px;
+                    padding-top: 10px;
+                    
+                    
+
+                }
+
+            }
+
+            
+            
+            
+        }
+
+       
+
+    }
+
+    @media (max-width:  1024px) {
+        .line-3{
+            
+            flex-direction: column;
+    
+        }
+    }    
+
+
+    }
+    
+}
+
