--- a/My-Portfolio2/portfolio/src/components/about/about.css
+++ b/My-Portfolio2/portfolio/src/components/about/about.css
@@ -33,4 +33,10 @@
     top: 2450px;
     height: 332px;
   }
+}
+@media (min-width: 350px) and (max-width: 478px) {
+  .about {
+    top: 2394px;
+    height: 460px;
+  }
 }/*# sourceMappingURL=about.css.map */
