--- a/My-Portfolio2/portfolio/src/components/about/about.scss
+++ b/My-Portfolio2/portfolio/src/components/about/about.scss
@@ -51,3 +51,15 @@
         height: 332px;
     }
 }
+
+@media (min-width:350px) and (max-width: 478px) {
+
+    .about{
+
+        top: 2394px;
+        height: 460px;
+        
+
+    }
+
+}
