--- a/My-Portfolio2/portfolio/src/components/footer/footer.scss
+++ b/My-Portfolio2/portfolio/src/components/footer/footer.scss
@@ -131,6 +131,18 @@
                         border-radius: 15px;
                 
                 }
+
+                @media (min-width:350px) and (max-width: 450px) {
+
+                    .text{
+
+                        width: 310px;
+
+                    }
+
+                }
+                
+                
         
                 button { 
                     
