--- a/My-Portfolio2/portfolio/src/components/navbar/topbar.css
+++ b/My-Portfolio2/portfolio/src/components/navbar/topbar.css
@@ -71,6 +71,12 @@
 .navbar .contact-button button:hover {
   margin-bottom: 7px;
 }
+@media (min-width: 350px) and (max-width: 450px) {
+  .navbar .contact-button {
+    width: 120px;
+    font-size: 17px;
+  }
+}
 .navbar .sun svg {
   width: 40px;
   height: 40px;
