--- a/My-Portfolio2/portfolio/src/components/navbar/topbar.scss
+++ b/My-Portfolio2/portfolio/src/components/navbar/topbar.scss
@@ -132,6 +132,16 @@
     }
 }
 
+@media (min-width:350px) and (max-width: 450px) {
+
+    .contact-button{
+
+        width: 120px;
+        font-size: 17px;
+
+    }
+
+}
     
     
     .sun{
