--- a/My-Portfolio2/portfolio/src/components/screen/screen.css
+++ b/My-Portfolio2/portfolio/src/components/screen/screen.css
@@ -60,6 +60,11 @@
   border-radius: 15px;
   padding: 20px;
 }
+@media (min-width: 350px) and (max-width: 448px) {
+  .screen .contain .badges {
+    font-size: 15px;
+  }
+}
 @media (max-width: 1280px) {
   .screen .contain {
     width: 70%;
